--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://edwardramirez31.github.io/edwardramirez31.github.io",
+  "homepage": "https://edwardramirez31.github.io/my-app",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
