--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "CI=true react-scripts test",
     "eject": "react-scripts eject",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx --max-warnings=0 .",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -49,6 +50,23 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^27.0.2"
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-conventional": "^13.1.0",
+    "lint-staged": "^12.3.4",
+    "@types/jest": "^27.0.2",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-redux-saga": "^1.2.1",
+    "husky": "^7.0.4",
+    "@semantic-release/changelog": "5.0.1",
+    "@semantic-release/git": "^9.0.1",
+    "semantic-release": "^19.0.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "prettier": "^2.3.0"
   }
 }
