fix: change html title tag to use todo app

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,9 +12,10 @@
         "prettier"
     ],
     "parserOptions": {
-        "ecmaVersion": 6,
+        "ecmaVersion": 2018,
         "sourceType": "module",
         "ecmaFeatures": {
+            "experimentalObjectRestSpread": true,
             "jsx": true,
             "modules": true
         }
