--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,31 +1,64 @@
 {
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "project": ["./tsconfig.json"]
+    },
     "env": {
         "browser": true,
         "es2021": true,
         "jest": true
     },
     "extends": [
-        "plugin:react/recommended",
-        "plugin:redux-saga/recommended",
-        "airbnb",
-        "airbnb/hooks",
-        "prettier"
+      "airbnb",
+      "airbnb-typescript",
+      "airbnb/hooks",
+      "prettier",
+      "plugin:react/recommended",
+      "plugin:@typescript-eslint/eslint-recommended",
+      "plugin:@typescript-eslint/recommended",
+      "plugin:redux-saga/recommended",
+      "plugin:import/errors",
+      "plugin:import/warnings",
+      "plugin:import/typescript"
     ],
-    "parserOptions": {
-        "ecmaVersion": 2018,
-        "sourceType": "module",
-        "ecmaFeatures": {
-            "experimentalObjectRestSpread": true,
-            "jsx": true,
-            "modules": true
-        }
-    },
     "plugins": [
-        "react",
-        "prettier"
+      "@typescript-eslint",
+      "prettier",
+      "react"
     ],
     "rules": {
-        "prettier/prettier": ["error"]
-
-    }
+        "prettier/prettier": "error",
+        "react/jsx-uses-react": "off",
+        "react/react-in-jsx-scope": "off",
+        "no-underscore-dangle": "off",
+        "no-use-before-define": "off",
+        "no-param-reassign": ["error", { "ignorePropertyModificationsFor": ["draft"] }],
+        "no-shadow": "off",
+        "@typescript-eslint/explicit-module-boundary-types": "error",
+        "@typescript-eslint/explicit-function-return-type": "error",
+        "@typescript-eslint/no-explicit-any": "error",
+        "@typescript-eslint/no-use-before-define": "error",
+        "@typescript-eslint/consistent-type-imports": "error",
+        "react/jsx-filename-extension": ["error", { "extensions": [".tsx"] }],
+        "react/function-component-definition": [
+            2,
+            {
+              "namedComponents": "arrow-function",
+              "unnamedComponents": "arrow-function"
+            }
+          ],
+        "react/prop-types": "off",
+        "@typescript-eslint/no-unused-vars": [
+            "error",
+            { "argsIgnorePattern": "^_action$" }
+        ]
+    },
+    "settings": {
+        "import/resolver": {
+          "node": {
+            "extensions": [".js", ".jsx", ".ts", ".tsx"],
+            "paths": ["src"]
+          }
+        }
+      }
 }
