--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,31 +10,22 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  test:
+    name: Test project
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [14.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        
-    - name: Install dependencies
-      run: npm install
-
-    
+    - uses: ./.github/actions/install_deps
+        with:
+          node-version: ${{ matrix.node-version }}
       
     - name: Run the tests and generate coverage report
-      run: npm test -- --coverage
+      run: yarn test -- --coverage
       
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
@@ -44,8 +35,26 @@ jobs:
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         
+  deploy:
+    name: Deploy to GH Pages
+
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.ref == 'refs/heads/master'
+
+    strategy:
+      matrix:
+        node-version: [14.x]
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    - uses: ./.github/actions/install_deps
+        with:
+          node-version: ${{ matrix.node-version }}
+      
     - name: Build
-      run: npm run build
+      run: yarn build
       
     - name: Deploy
       run: |
@@ -62,18 +71,15 @@ jobs:
   release:
     name: Run semantic release
     runs-on: ubuntu-latest
+    needs: test
     if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v2
         with:
           persist-credentials: false
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
+      - uses: ./.github/actions/install_deps
         with:
-          node-version: 14
-          cache: 'yarn'
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
+          node-version: ${{ matrix.node-version }}
       - name: Release
         run: yarn semantic-release
         env:
