--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,28 +20,27 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-    - uses: ./.github/actions/install_deps
-        with:
-          node-version: ${{ matrix.node-version }}
-      
+    - name: Installing dependencies
+      uses: ./.github/actions/install_deps
+      with:
+        node-version: ${{ matrix.node-version }}
+
     - name: Run the tests and generate coverage report
       run: yarn test -- --coverage
-      
+
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
-      
+
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        
+
   deploy:
     name: Deploy to GH Pages
-
     runs-on: ubuntu-latest
     needs: test
     if: github.ref == 'refs/heads/master'
-
     strategy:
       matrix:
         node-version: [14.x]
@@ -49,9 +48,10 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-    - uses: ./.github/actions/install_deps
-        with:
-          node-version: ${{ matrix.node-version }}
+    - name: Installing dependencies
+      uses: ./.github/actions/install_deps
+      with:
+        node-version: ${{ matrix.node-version }}
       
     - name: Build
       run: yarn build
@@ -77,7 +77,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           persist-credentials: false
-      - uses: ./.github/actions/install_deps
+      - name: Installing dependencies
+        uses: ./.github/actions/install_deps
         with:
           node-version: ${{ matrix.node-version }}
       - name: Release
