--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
     "redux-saga": "^1.1.3",
+    "redux-saga-test-plan": "^4.0.4",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5",
     "uuid": "^8.3.2",
@@ -53,10 +54,10 @@
     ],
     "coverageThreshold": {
       "global": {
-        "statements": 5,
-        "branches": 5,
-        "functions": 5,
-        "lines": 5
+        "statements": 50,
+        "branches": 50,
+        "functions": 50,
+        "lines": 50
       }
     }
   },
